--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <script>Kakao.init("84607a25d1431e36c1ece33a0ce1438c");</script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
