--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,10 @@
     -->
     <title>React App</title>
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
-    <script>Kakao.init("84607a25d1431e36c1ece33a0ce1438c");</script> 
+    <script>Kakao.init("84607a25d1431e36c1ece33a0ce1438c");</script>
   </head>
-  <body>
+  <!-- <body oncontextmenu='return false' onselectstart='return false' ondragstart='return false'> -->
+    <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
