[수정] 사이트 이름 변경

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Diver</title>
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <script>Kakao.init("84607a25d1431e36c1ece33a0ce1438c");</script>
   </head>
