--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,15 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <meta name="theme-color" content="#000000" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YDRFCGX56M"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YDRFCGX56M');
+</script>
     <meta
       name="description"
       content="Web site created using create-react-app"
