--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,14 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <meta name="theme-color" content="#000000" />
+    <meta name=”description” content=”독서기반의 SNS, BOOKDIVER” />
+    <meta name=”keywords” content=”책,독서,북리뷰,독서모임,독서커뮤니티,독후감,책리뷰,자기계발” />
+    <meta property="og:url" content="https://www.bookdiver.net/" />
+    <meta property=”og:title” content=”독서기반sns, Diver” />
+    <meta property=”og:description” content=”독서의 바다에 빠져들다” /> 
+    <meta property=”og:image” content=”./sumnail.jpeg” />
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-205940044-1"></script>
 <script>
@@ -15,43 +22,15 @@
 
   gtag('config', 'UA-205940044-1');
 </script>
-
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>Diver</title>
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <script>Kakao.init("84607a25d1431e36c1ece33a0ce1438c");</script>
   </head>
   <!-- <body oncontextmenu='return false' onselectstart='return false' ondragstart='return false'> -->
-    <body>
+<body oncontextmenu='return false' onselectstart='return false' ondragstart='return false'>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
