--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <script>Kakao.init("84607a25d1431e36c1ece33a0ce1438c");</script>
   </head>
   <!-- <body oncontextmenu='return false' onselectstart='return false' ondragstart='return false'> -->
-<body oncontextmenu='return false' onselectstart='return false' ondragstart='return false'>
+<body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
